chore: kotlin 2.1.0 update and misc refactorings